--- a/css/style.css
+++ b/css/style.css
@@ -56,3 +56,38 @@
     color: #fff;
     background-color: black;
 }
+
+/* carrito */
+
+#carritoLista{
+    list-style: none;
+    padding: 10px;
+    margin: 10px;
+    border: 5px solid rgb(126, 203, 144);
+    background-color: aquamarine;
+    color: bisque;
+}
+
+/* concurrencia */
+pre{
+    text-align: left;
+    background-color: black;
+    padding: 1rem;
+    border-radius: 10px;
+    width: 80%;
+    color: chartreuse;
+}
+
+/* try catch */
+#bodyTry{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+
+#mensaje{
+    font-weight: bold;
+    color: red;
+
+}
